# ---s3-athena-example---

./: Dockerfile  Makefile  README.md  file.txt  pyproject.toml  tox.ini
deploy/: cloudformation.yaml  jobgluescript.py  lambda.py
ninacode/: run.py
ninacode/code/: run.py  variaveis.py
ninacode/deploy/: cloudformation.yaml  lambda.py
